Thu,  8 Mar 2007 13:20:02 +0100 <thp@perli.net>
        * src/gpodder/librssreader.py: Keep track of a "parse_tree" variable 
          and check that the elements that set channel metadata are just below
          the <channel> item; this bug has been spotted while examining RSS 
          feeds on Radio Canada that have a <image> item which <title> tags 
          would be mis-interpreted by gPodder as being the channel's title

Thu,  8 Mar 2007 13:05:29 +0100 <thp@perli.net>
        * src/gpodder/liblocdbreader.py, src/gpodder/liblocdbwriter.py: Add
          support for override_title in channel's gpodder:info, so we can set 
          a custom title to be displayed in the GUI
        * src/gpodder/libpodcasts.py: Add support for override_title (custom
          title set by the user) and handle feeds with missing/empty title 
          gracefully (display URL as title instead)
        * src/gpodder/libgpodder.py: Read metadata from localdb when reading 
          the channel list (so we get the override_title if it is set
        * src/gpodder/gpodder.py: Fix typo for channel adding; update combo 
          box on channel properties change (for custom title); add support 
          for custom title to Gpodderchannel dialog handling code
        * data/gpodder.glade: Add custom title to the gPodder channel dialog
	  Thanks to Konstantin Ryabitsev (mricon.com) for suggesting this 
	  feature and for the donation :)

Thu,  8 Mar 2007 11:44:29 +0100 <thp@perli.net>
        * src/gpodder/console.py: Add support for error messages on update
        * src/gpodder/libpodcasts.py: Backup and restore cache file, so we
          can fallback to the old cache file if the server is down/we have 
          no network connectivity
        * src/gpodder/libgpodder.py: Support for error message callback
        * src/gpodder/gpodder.py: Display a message box when updating info 
          from a channel results in a error message

Wed,  7 Mar 2007 15:46:34 +0100 <thp@perli.net>