@@ -28,10 +28,9 @@
    then sync, but that's a lot of extra disk activity.
    (suggested by Andy -- apblist@speakeasy.net)
 
- * 1. I didn't have write permission to my MP3 player mount point, but I
-   didn't get an error - the sync just hung. It would be nice to get an
-   error message, or something. (Robert Young <robertkyoung gmail.com>)
-
+ * libipodsync
+   -> maybe delete podcasts that are deleted locally but still on ipod
+ 
  * My favourite Videocast offers 3gp-Files (for mobiles) and m4v-Files 
    (for iPods) in his feed.gPodder loads the low quality m4v-File, which 
    is not only low quality, kaffeine can't even play it.  How can I 
@@ -41,15 +40,6 @@
  * In preferences dialog, have two choices for programs (one for video 
    podcasts, one for audio podcasts)
                    (suggested by Philipp Ottlinger, otg@aiki-it.de)
-
- -------------------------
-
- * i would like to have a button that will download all new files in all
-   channels that are subscribed. An option in preferences that will
-   autostart this process after startup would be also a nice feature :-)
-      (suggested by Robert Pankowecki <robert.pankowecki     gmail.com>)
-
-      -> partially done already
 
  -------------------------
 
@@ -77,10 +67,4 @@
      then you don't need the Download Status tab at all, this will allow
      you to see what is downloaded and what not
  
- * libipodsync
-   -> maybe delete podcasts that are deleted locally but still on ipod
- 
- * do more translations (you can contribute here, of course :)
- 
- * maybe a "all channels view"
 
