@@ -1,3 +1,10 @@
+Thu,  8 Mar 2007 15:01:20 +0100 <thp@perli.net>
+        * src/gpodder/libgpodder.py: Add support for "download after update"
+        * src/gpodder/gpodder.py: Support for "download after update" setting
+        * data/gpodder.glade: Move automatic options to "Advanced" tab and 
+          add checkbox for download new episodes after updating channels
+        * TODO: Updated, sorted and cleaned up TODO list
+
 Thu,  8 Mar 2007 13:20:02 +0100 <thp@perli.net>
         * src/gpodder/librssreader.py: Keep track of a "parse_tree" variable 
           and check that the elements that set channel metadata are just below
